print stylesheet + draggable everywhere

--- a/beta/style.css
+++ b/beta/style.css
@@ -98,3 +98,44 @@ nav li {
 .draggable {
     cursor: url("cursor-32.png"), auto;
 }
+
+@media screen {
+    .no-screen {
+        display: none;
+    }
+}
+
+@media print {
+    nav {
+        display: none;
+    }
+    .text {
+        margin-left: 0px;
+    }
+    h1 {
+        font-size: 250px;
+        line-height: 210px;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    h2 {
+        page-break-before: always;
+        margin-top: 20px;
+    }
+    h3 {
+        page-break-after: avoid;
+    }
+    .cover-info {
+        position: absolute;
+        top: 1.5cm;
+        right: 0;
+    }
+}
+@page :left {
+    margin-left: 2cm;
+    margin-right: 4cm;
+}
+@page :right {
+    margin-left: 4cm;
+    margin-right: 2cm;
+}
