--- a/beta/style.css
+++ b/beta/style.css
@@ -40,6 +40,18 @@ div {
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Work Sans';
+    src: url('fonts/WorkSans-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Work Sans Semi Bold';
+    src: url('fonts/WorkSans-SemiBold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
     background: url(cardboard.png) repeat;
@@ -49,6 +61,17 @@ body {
 }
 a, a:hover, a:focus, a:visited, a:active {
     color: black;
+    text-decoration: none;
+}
+a.underlined-link {
+    border-bottom: 2px solid black;
+}
+b {
+    font-family: "Work Sans Semi Bold";
+    font-weight: normal;
+}
+ul li {
+    list-style: none;
 }
 h1 {
     font-family: "League Gothic";
@@ -75,9 +98,14 @@ h2, h3 {
 }
 h2 {
     margin: 60px 0 10px 0;
+    text-transform: uppercase;
 }
 h3 {
     margin: 30px 0 5px 0;
+}
+h4 {
+    text-transform: uppercase;
+    font-weight: normal;
 }
 nav {
     position: fixed;
@@ -92,50 +120,53 @@ nav li {
 }
 .text {
     float: left;
-    max-width: 700px;
+    width: 600px;
     margin-left: 50px;
 }
 .draggable {
     cursor: url("cursor-32.png"), auto;
+}
+.cover-info p {
+    margin-bottom: 25px;
+}
+#program h3 {
+    margin-bottom: -40px;
+}
+table a {
+    font-family: "Work Sans Semi Bold";
+    font-weight: normal;
+}
+td {
+    vertical-align: top;
+    padding-top: 50px;
+    margin-top: -50px;
+}
+td:first-of-type {
+    width: 80px;
+}
+#speakers p {
+    padding-top: 50px;
+}
+#speakers ul {
+    padding-top: 25px;
+    margin-left: 60px;
+}
+.logo {
+    margin-top: 30px;
+    width: 400px;
 }
 
 @media screen {
     .no-screen {
         display: none;
     }
-}
-
-@media print {
-    nav {
-        display: none;
-    }
-    .text {
-        margin-left: 0px;
-    }
-    h1 {
-        font-size: 250px;
-        line-height: 210px;
-        margin-top: 0px;
-        margin-left: 0px;
-    }
-    h2 {
-        page-break-before: always;
-        margin-top: 20px;
-    }
-    h3 {
-        page-break-after: avoid;
-    }
     .cover-info {
         position: absolute;
-        top: 1.5cm;
-        right: 0;
+        top: 70px;
+        right: 25px;
+        width: 280px;
+        padding: 20px 20px 0 20px;
+        background-color: white;
+        z-index: 2000;
     }
-}
-@page :left {
-    margin-left: 2cm;
-    margin-right: 4cm;
-}
-@page :right {
-    margin-left: 4cm;
-    margin-right: 2cm;
 }
