--- a/beta/print-poster.css
+++ b/beta/print-poster.css
@@ -1,4 +1,4 @@
-.no-print {
+.no-print, .no-poster {
     display: none;
 }
 nav {
@@ -7,6 +7,12 @@ nav {
 
 body {
     font-size: 12px;
+}
+p {
+    orphans: 3;
+}
+.poster-less-letter-spacing {
+    letter-spacing: -0.4pt;
 }
 .print-poster-container {
     width: 420mm;
@@ -57,16 +63,18 @@ h3 {
 }
 #program {
     position: absolute;
-    top: 12.5cm;
-    right: 3cm;
-    width: 16cm;
+    top: 11.7cm;
+    right: 2.5cm;
+    width: 16.5cm;
 }
 #program h3 {
     margin-bottom: 0;
-    font-size: 9pt;
+    margin-top: 15mm;
+    font-size: 14pt;
     padding-bottom: 0.4mm;
-    border-bottom: 0.8mm solid black;
+    border-bottom: 0mm solid black;
     font-family: "Work Sans Semi Bold";
+    text-transform: uppercase;
 }
 #program td {
     font-size: 13pt;
@@ -124,9 +132,16 @@ h3 {
 #theme {
     position: absolute;
     top: 58cm;
-    right: 4cm;
-    width: 36cm;
-    font-size: 30pt;
+    right: 11.5cm;
+    width: 29cm;
+    font-size: 28.4pt;
+}
+#theme p {
+    line-height: 32.5pt;
+}
+.theme-questions {
+    margin-left: 5cm;
+    margin-top: -32pt;
 }
 .print-footer-2 {
     position: absolute;
